<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2012-2016 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
            android:id="@+id/toggle_time"
            android:alphabeticShortcut="t"
            android:icon="@drawable/ic_menu_view"
            app:showAsAction="ifRoom"
            android:title="@string/logview_options" />

    <item
            android:id="@+id/clearlog"
            android:icon="@drawable/ic_menu_delete"
            app:showAsAction="never"
            android:title="@string/clear_log"
            android:titleCondensed="@string/clear"/>
    <item
            android:id="@+id/send"
            android:icon="@drawable/ic_menu_share"
            app:showAsAction="never"
            android:title="@string/send_logfile"
            android:titleCondensed="@string/send"/>

</menu>
