<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BitmaskActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/stdpadding"
    tools:context=".AddProviderActivity">

    <!--Contains header information!??? -->
    <include layout="@layout/v_add_provider" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <!-- the header contains the mask-->
        <include layout="@layout/v_provider_header" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_uri_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/new_provider_uri"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:id="@+id/danger_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/add_button_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/save" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
