<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    style="@style/BitmaskActivity"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
    app:layout_constraintEnd_toStartOf="@+id/guideline_right"
    app:layout_constraintHeight_min="411dp"
    app:layout_constraintStart_toStartOf="@+id/guideline_left"
    app:layout_constraintTop_toTopOf="@+id/guideline_top"
    android:layout_margin="@dimen/stdpadding"
    android:padding="@dimen/stdpadding"
    android:background="@color/colorBackground"
    android:isScrollContainer="true"
    android:fadeScrollbars="false"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <se.leap.bitmaskclient.base.views.ProviderHeaderView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_uri_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/new_provider_uri"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <CheckBox
                android:id="@+id/danger_checkbox"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/add_button_margin"/>

            <LinearLayout
                android:id="@+id/button_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_below="@+id/danger_checkbox"
                >

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="80dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="80dp"
                    android:layout_marginLeft="@dimen/add_button_margin"
                    android:layout_marginStart="@dimen/add_button_margin"
                    android:enabled="false"
                    android:text="@string/save" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>